analyzer/tests/snapshots/diagnostics_snapshots__missing_binary_rhs@missing_binary_rhs.formula.snap
---
source: analyzer/tests/diagnostics_snapshots.rs
assertion_line: 17
expression: rendered
input_file: analyzer/tests/diagnostics/missing_binary_rhs.formula
---
error: expected expression after 'Plus'
  --> <input>:1:3 [2..3]
