analyzer/tests/snapshots/diagnostics_snapshots__missing_lhs@missing_lhs.formula.snap
---
source: analyzer/tests/diagnostics_snapshots.rs
assertion_line: 13
expression: rendered
input_file: analyzer/tests/diagnostics/missing_lhs.formula
---
error: expected primary expression, found Star
  --> <input>:1:1 [0..1]
error: expected EOF
  --> <input>:1:3 [2..3]
