analyzer/tests/snapshots/diagnostics_snapshots__missing_rparen@missing_rparen.formula.snap
---
source: analyzer/tests/diagnostics_snapshots.rs
assertion_line: 17
expression: rendered
input_file: analyzer/tests/diagnostics/missing_rparen.formula
---
error: expected ')', found Eof
  --> <input>:2:1 [7..7]
