analyzer/tests/snapshots/diagnostics_snapshots__multi_errors_2@multi_errors_2.formula.snap
---
source: analyzer/tests/diagnostics_snapshots.rs
assertion_line: 13
expression: rendered
input_file: analyzer/tests/diagnostics/multi_errors_2.formula
---
error: expected expression after 'Plus'
  --> <input>:1:4 [3..4]
error: expected EOF
  --> <input>:1:8 [7..8]
