analyzer/tests/snapshots/diagnostics_snapshots__nested_missing_rparen@nested_missing_rparen.formula.snap
---
source: analyzer/tests/diagnostics_snapshots.rs
assertion_line: 13
expression: rendered
input_file: analyzer/tests/diagnostics/nested_missing_rparen.formula
---
error: expected ')', found Eof
  --> <input>:2:1 [9..9]
  = label: 1:1 [0..1] this '(' is not closed
